syntax = "proto3";

package products;

message ListRequest {}

message Product {
  int32 id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message ListResponse {
  repeated Product items = 1;
}

message DecrementRequest {
  int32 productId = 1;
  int32 quantity = 2;
}

message DecrementResponse {
  bool success = 1;
}

service ProductsService {
  rpc List (ListRequest) returns (ListResponse);
  rpc DecrementStock (DecrementRequest) returns (DecrementResponse);
}


